[tool.poetry]
name = "multialert"
version = "0.1.0"
description = "Flexible package to send alerts with a unified interface"
authors = ["Groundlight Team <info@groundlight.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
twilio = "^8.5.0"
slack-sdk = "^3.21.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
